# delos

./: .gitignore  CLAUDE.md  Dockerfile.template  GETTING_STARTED.md  Makefile  PLAN.md  README.md  TROUBLESHOOTING.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
.claude/agents/: skeptical-new-user.md
.github/workflows/: ci.yaml  release.yaml
cli/: main.go
cli/cmd/: datasets.go  deploy.go  eval.go  observe.go  prompt.go  root.go  runtime.go
deploy/local/: .env.example  docker-compose.yaml  init-db.sql
docs/: README.md
docs/api-reference/: prompt.md  runtime.md
docs/architecture/: overview.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: providers.md
pkg/cache/: redis.go  redis_integration_test.go  redis_test.go
pkg/config/: config.go  config_test.go
pkg/database/: database.go  database_integration_test.go  database_test.go
pkg/grpcutil/: errors.go  errors_test.go  interceptors.go  interceptors_test.go  server.go  server_test.go
pkg/telemetry/: telemetry.go  telemetry_test.go
pkg/testutil/: httpmock.go  naughty_strings.go  testutil.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/delos/: __init__.py  client.py  config.py
sdk/python/src/delos/models/: __init__.py  common.py  datasets.py  deploy.py  eval.py  observe.py  prompt.py  runtime.py
sdk/python/src/delos/services/: __init__.py  base.py  datasets.py  deploy.py  eval.py  observe.py  prompt.py  runtime.py
services/datasets/: Dockerfile  README.md  dataformat.go  datasets.go  datasource.go  handler.go  service.go  store.go  store_test.go
(+86 files in other folders)
